# pcre-benchmark

./: .gitignore  README.md  run.bash
cpp/: CMakeLists.txt
cpp/src/: test.cpp
csharp/: Program.cs
golang/: main  main.go
java/: build.gradle
java/src/main/java/pcre/: PcreBenchmark.java  PcreTest.java
js/: pcre.js
python/: main.py
rust/: Cargo.toml
rust/src/: main.rs
